--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,6 +26,7 @@
 				<div class="ui attached inverted menu">
 				  	{{ m.nav_link('index', 'Home') }}
                     {{ m.nav_link('map', 'Map') }}
+                    {{ m.nav_link('faq', 'FAQ') }}
 					{{ m.nav_link('contact', 'Contact') }}
 				 		<!-- User is logged in -->
 				      	{% if current_user.is_authenticated %}
